--- a/contact-us-eng.html
+++ b/contact-us-eng.html
@@ -25,25 +25,23 @@
     </audio>
     <h2>Contact Us</h2>
     <ul>
-      <li><a href="https://goo.gl/maps/TCHVAwW4K3o2z1z78" style="text-decoration: none; color: black;">Address: 289
-          Nam Cheong Street, Sham Shui Po, Kowloon</a></li>
-      <li><a href="tel:227796851" style="text-decoration: none; color: black;">Phone: 27796851</a></li>
-      <li><a href="fax:27884434" style="text-decoration: none; color: black;">Fax: 27884434</a></li>
+      <li><a href="https://maps.app.goo.gl/w1rhJEPcA6As4GeL8" style="text-decoration: none; color: black;">Address: XXXXXXXX</a></li>
+      <li><a href="tel:XXXXXXXX" style="text-decoration: none; color: black;">Phone: XXXXXXXX</a></li>
+      <li><a href="fax:XXXXXXXX" style="text-decoration: none; color: black;">Fax: XXXXXXXX</a></li>
       <li><a href="mailto:s181034@cmass.edu.hk" style="text-decoration: none; color: black;">Email:
           s181034@cmass.edu.hk</a></li>
     </ul>
     <h2>Directions:</h2>
     <h3>By MTR (Mass Transit Railway):</h3>
-    From Sham Shui Po MTR Station Exit C, turn right onto Wai Chi Street, then turn right onto Nam Cheong Street.
-    Continue up the sloping road after passing through Sham Shui Po Park. (Approximately 15 minutes on foot, uphill)
+    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</br>
+    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</br>
     <h3>By Bus:</h3>
-    2B, 2E, 2F, 104, 86, 86A, 87A, 87B, 702A
+    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</br>
     <h3>By Minibus:</h3>
-    30B (From Sham Shui Po MTR Station Exit A to Chak On Estate)</br>
-    30A (From Fa Yuen Street opposite Hung On Building to Chak On Estate)</br>
+   XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</br>
     <h2>Map</h2>
     <iframe class="hide-in-textonly" 
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8527.401988159729!2d114.16461095422511!3d22.33892769249267!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34040736460a8a39%3A0x39dbc276af4d1f51!2z5bug5ZWG5pyD5Lit5a24!5e0!3m2!1sen!2sus!4v1690720703318!5m2!1sen!2sus"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d472322.0440913065!2d113.80973381849745!3d22.35302585954531!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3403e2eda332980f%3A0xf08ab3badbeac97c!2z6aaZ5riv!5e0!3m2!1szh-TW!2shk!4v1738326481258!5m2!1szh-TW!2shk"
       width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"
       referrerpolicy="no-referrer-when-downgrade"></iframe></br></br>
     <button class="show-in-printonly" show-href="." onClick="onTogglePrintonly()">Back</button>
