--- a/contact-us.html
+++ b/contact-us.html
@@ -24,10 +24,10 @@
     </audio>
     <h2>聯絡我們</h2>
     <ul>
-      <li> <a href="https://goo.gl/maps/TCHVAwW4K3o2z1z78"
-          style="text-decoration: none; color: black;">地址：九龍深水埗南昌街289號</a></li>
-      <li><a href="tel:227796851" style="text-decoration: none; color: black;">電話：27796851</a></li>
-      <li> <a href="fax:27884434" style="text-decoration: none; color: black;">傳真：27884434</a></li>
+      <li> <a href="https://maps.app.goo.gl/w1rhJEPcA6As4GeL8"
+          style="text-decoration: none; color: black;">地址：XXXXXXXX</a></li>
+      <li><a href="tel:XXXXXXXX" style="text-decoration: none; color: black;">電話：XXXXXXXX</a></li>
+      <li> <a href="fax:XXXXXXXX" style="text-decoration: none; color: black;">傳真：XXXXXXXX</a></li>
       <li> <a href="mailto:s181034@cmass.edu.hk"
           style="text-decoration: none; color: black;">電郵：s181034@cmass.edu.hk</a></li>
 
@@ -36,15 +36,14 @@
     </ul>
     <h2>前往方法：</h2>
     <h3>地鐵:</h3>
-    在石硤尾港鐵站C出口沿偉智街右轉入南昌街，再沿南昌街斜路向上行經石硤尾公園後 即達。(步行時間約15分鐘，上斜)</br>
+    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</br>
     <h3>途經的巴士:</h3>
-    2B、2E、2F、104、86、86A、87A、87B、702A
+    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</br>
     <h3>途經的小巴:</h3>
-    30B（石硤尾港鐵站A出口至澤安邨）</br>
-    30A（快富街鴻安樓對出至澤安邨）</br>
+    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</br>
     <h2>地圖</h2>
     <iframe class="hide-in-textonly" 
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8527.401988159729!2d114.16461095422511!3d22.33892769249267!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34040736460a8a39%3A0x39dbc276af4d1f51!2z5bug5ZWG5pyD5Lit5a24!5e0!3m2!1szh-TW!2shk!4v1690720703318!5m2!1szh-TW!2shk"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d472322.0440913065!2d113.80973381849745!3d22.35302585954531!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3403e2eda332980f%3A0xf08ab3badbeac97c!2z6aaZ5riv!5e0!3m2!1szh-TW!2shk!4v1738326481258!5m2!1szh-TW!2shk"
       width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"
       referrerpolicy="no-referrer-when-downgrade"></iframe>
   </br></br>
